# job_market_intelligence_bot

./: .env  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  alerts_state.json  company_boards.json.example  exec_loop.sh  feed_state.json  job_search_config.json.example  jobs.csv  matches.json  openclaw_job_alerts_prompt.txt  pull_desc.py  pull_jobs.py  pyproject.toml  resume.json  telegram_callback_worker.py  todo.md
.claude/: settings.json
.github/workflows/: ci.yml
jobbot/: __init__.py  common.py  logging_config.py  matching.py  models.py  sources.py  storage.py
tests/: test_common.py  test_matching_extra.py  test_new_sources.py  test_pull_desc.py  test_pull_jobs.py  test_sources.py  test_sources_extra.py  test_storage_extra.py  test_telegram_callback_worker.py
