[project]
name = "job-market-intelligence-bot-main"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.20.0",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "pytest-cov>=6.0.0", "ruff>=0.15.9", "mypy>=1.20.0", "pylint>=4.0.5"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "G", "I", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]  # nested `with` in tests aids readability; not a safety issue

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true


[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring (handled by ruff or selectively)
    "C0103", # invalid-name
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
    "R0914", # too-many-locals
    "E1101", # no-member
    "W0511", # fixme
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pylint.format]
max-line-length = 120
